test/spec_vectors/table/ok/module_12.wat
(module (table (import "spectest" "table") 0 funcref) (table 0 funcref))