test/spec_vectors/table/fail/module_30.wat
(module (table 0 (ref extern)))